Fixed login button on mobile; .gcloudignore

--- a/static/main.less
+++ b/static/main.less
@@ -917,13 +917,14 @@ div.login-btn-large span {
 }
 
 div.login-btn-small {
-   width: 100%;
+   width: 60%;
    text-align: center;
    font-size: 19px;
    font-weight: 400;
    color: white;
    background-color: darken(@freshtile, 10%);
-   margin: 0;
+   margin-left: auto;
+   margin-right: auto;
    margin-top: 12px;
    padding: 6px;
    padding-top: 9px;
